EXTRA_DIST = 	pam.d/* atd common-auth-pc gdm gnomesu-pam pam_test rlogin smtp \
		useradd xdm-np chage common-password-pc gdm-autologin \
		kcheckpass Makefile.am passwd rpasswd sshd vlock \
		xdm.rpmsave chfn common-session-pc gdm.rpmsave \
		login policy-kit rsh sshd.rpmsave vsftpd xlock chsh crond gnome-passwd \
		login2 other ppp samba su wbem xscreensaver common-account-pc cups \
		gnome-screensaver login.rpmsave rexec shadow sudo xdm
